--- a/healthdiagnosis/templates/profile.html
+++ b/healthdiagnosis/templates/profile.html
@@ -14,7 +14,8 @@
         background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
         color: #333;
         display: flex;               
-        flex-direction: column;      
+        flex-direction: column;  
+            
       }
       .navbar {
           background-color: #2a2a2a; /* Slightly lighter dark background for navbar */
@@ -41,7 +42,7 @@
         border-radius: 8px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         padding: 30px;
-        margin-top: 50px;
+        
       }
       .profile-card h2 {
         color: #1a1a1a;
@@ -60,6 +61,7 @@
         padding: 20px;
         text-align: center;
         position: relative;
+        top: 31.5%;
       }
       footer p {
         margin: 0;
