--- a/healthdiagnosis/templates/profile_edit.html
+++ b/healthdiagnosis/templates/profile_edit.html
@@ -14,10 +14,10 @@
             box-sizing: border-box;
         }
         body {
-            background-image: url("{% static 'assets/sudeen.jpg' %}");
+            background-image: url("{% static 'assets/signup-page.png' %}");
             font-family: 'Poppins', sans-serif;
         }
-        .background {
+        /* .background {
             width: 430px;
             height: 520px;
             position: absolute;
@@ -30,7 +30,7 @@
             width: 200px;
             position: absolute;
             border-radius: 50%;
-        }
+        } */
         
 
         form {
