--- a/healthdiagnosis/templates/about.html
+++ b/healthdiagnosis/templates/about.html
@@ -14,8 +14,8 @@
         margin: 0;
         font-family: 'Arial', sans-serif;
         background-image: url("{% static 'assets/index-page.png' %}");
-        {% comment %} background: linear-gradient(45deg, #f0f0f0, #c0d9e9); {% endcomment %}
-        {% comment %} color: #333; {% endcomment %}
+        /* {% comment %} background: linear-gradient(45deg, #f0f0f0, #c0d9e9); {% endcomment %}
+        {% comment %} color: #333; {% endcomment %} */
       }
 
       /* Navbar Styles */
@@ -41,20 +41,16 @@
       }
 
       /* Main Content */
-      .page-container {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-      }
       .content {
-        flex: 1;
-        padding: 60px 15px;
-        background: white;
-        margin: 30px auto;
-        border-radius: 15px;
-        max-width: 1000px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+          flex: 1;
+          padding: 60px 15px;
+          background: white;
+          margin: 30px auto;
+          border-radius: 15px;
+          max-width: 1000px; /* Make both containers the same width */
+          box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       }
+
       h3 {
         font-size: 32px;
         color: #2b6777;
