--- a/healthdiagnosis/templates/privacy.html
+++ b/healthdiagnosis/templates/privacy.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -11,8 +12,9 @@
             height: 100%;
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
-            color: #333;
+            background-image: url("{% static 'assets/index-page.png' %}");
+            /* background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
+            color: #333; */
         }
 
         /* Navbar Styles */
