--- a/healthdiagnosis/templates/thank_you.html
+++ b/healthdiagnosis/templates/thank_you.html
@@ -1,4 +1,5 @@
 <!-- thank_you.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body, html {
+        height: 100%;
+        margin: 0;
+        font-family: 'Arial', sans-serif;
+        background-image: url("{% static 'assets/index-page.png' %}");
+        /* background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
+        color: #333; */
+        display: flex;               
+        flex-direction: column;  
+      }
+    </style>
 </head>
 <body>
     <div class="container text-center my-5">
