enhanced login facility

--- a/healthdiagnosis/templates/index.html
+++ b/healthdiagnosis/templates/index.html
@@ -145,12 +145,12 @@
       .alert-box {
           display: none;
           position: fixed;
-          top: 5%; 
+          top: 7%; 
           left: 50%;
           transform: translateX(-50%); 
           width: 300px;
           padding: 20px;
-          background-color: #edf0e7;
+          background-color: #c6d5a7;
           color: #0e0d0d;
           text-align: center;
           border-radius: 8px;
