--- a/healthdiagnosis/templates/index.html
+++ b/healthdiagnosis/templates/index.html
@@ -1065,7 +1065,7 @@
             <div id="transcription" class="mb-4"></div>
           
             {% if symptoms %}
-                <p class="text-warning", style=" background-color: white;  text-align: center;"> Your symptoms are: {{ symptoms }}</p>
+                <p class="text-warning", style=" background-color: white; font-size: 18px;  text-align: center;"> Your symptoms are: {{ symptoms }}</p>
             {% endif %}
             
             <div id="transcription" class="mb-4"></div>
