--- a/healthdiagnosis/templates/about.html
+++ b/healthdiagnosis/templates/about.html
@@ -13,7 +13,7 @@
         height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/index-page.png' %}");
+        background-image: url("{% static 'assets/home-page.png' %}");
         /* {% comment %} background: linear-gradient(45deg, #f0f0f0, #c0d9e9); {% endcomment %}
         {% comment %} color: #333; {% endcomment %} */
       }
