--- a/healthdiagnosis/templates/profile.html
+++ b/healthdiagnosis/templates/profile.html
@@ -12,7 +12,7 @@
         height: 100%; /* Full height for both body and html */
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background-image: url("{% static 'assets/index-page.png' %}");
+        background-image: url("{% static 'assets/home-page.png' %}");
         display: flex;
         flex-direction: column;
       }
