--- a/healthdiagnosis/templates/terms.html
+++ b/healthdiagnosis/templates/terms.html
@@ -12,7 +12,7 @@
             height: 100%;
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background-image: url("{% static 'assets/index-page.png' %}");
+            background-image: url("{% static 'assets/home-page.png' %}");
             /* background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
             color: #333; */
         }
