--- a/healthdiagnosis/templates/landing_page.html
+++ b/healthdiagnosis/templates/landing_page.html
@@ -26,8 +26,8 @@
             margin-right: 70px;
             align-items: center;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-            {% comment %} animation: fadeIn 1s;
-            overflow: hidden; /* Prevents overflow on small screens */ {% endcomment %}
+            /* {% comment %} animation: fadeIn 1s;
+            overflow: hidden; /* Prevents overflow on small screens */ 
         }
 
       @keyframes fadeIn {
