--- a/healthdiagnosis/templates/terms.html
+++ b/healthdiagnosis/templates/terms.html
@@ -91,27 +91,27 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/medifai">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/developer">Developer</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blog">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
-        </li>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/medifai">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/developer">Developer</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/blog">Blog</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/profile">Profile</a>
+          </li>
       </ul>
-    </div>
+  </div>
   </div>
 </nav>
 
@@ -134,7 +134,7 @@
 
     <h4>Governing Law</h4>
     <p>These Terms shall be governed by the laws of Nepal.</p>
-
+    
     <h4>Contact Us</h4>
     <p>If you have any questions about these Terms, please <a href="/contact" style="color: #2b6777; text-decoration: underline;">contact us</a>.</p>
 </div>
