--- a/templates/index.html
+++ b/templates/index.html
@@ -228,14 +228,14 @@
       <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/medifai">MedifAI</a>
+          <a class="navbar-brand" href="/home">MedifAI</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/medifai">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
@@ -266,7 +266,7 @@
       <!-- Main content -->
       <div class="content">
         <div class="container my-5 p-5 text-white rounded-3 shadow-lg">
-          <h1 class="text-center mb-4 text-warning name">MedifAI</h1>
+          <h1 class="text-center mb-4 text-warning name">Predict Disease</h1>
           <form id="symptomForm" action="/predict/" method="post">
             {% csrf_token %}
             <div class="mb-3">
